tests/fixtures/invalid/list_add_bool.py
# Cannot add List[int] and Bool
x: list[int] = [1, 2, 3] + True
